Page visible without js. Fixes #2

--- a/style.css
+++ b/style.css
@@ -397,6 +397,7 @@ div.with-arrow{
 #project {
 	position: relative;
 	width: 100%;
+  min-height: 600px;
 	margin: 0 auto;
 	color: #FFF;
 }
